added some serverside scripts

--- a/simple-media-server.service
+++ b/simple-media-server.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Type=simple
-ExecStart=/$HOME/simple-media-server/run.sh
+ExecStart=$HOME/simple-media-server/run.sh
 
 [Install]
 WantedBy=multi-user.target
